@@ -4,21 +4,18 @@ import org.codehaus.plexus.util.StringUtils;
 import org.junit.jupiter.api.Test;
 
 import java.io.FileNotFoundException;
-import java.util.List;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.filter;
 
 public class Adif3SchemaLoaderTest {
 
     @Test
     public void testSchemaLoader() throws FileNotFoundException {
         Adif3SchemaLoader loader = new Adif3SchemaLoader();
-        Adif3Schema schema = loader.loadFromFile("src/main/resources/adif/adx314.xsd");
-        assertThat(schema.getFields().size()).isEqualTo(164);
+        Adif3Schema schema = loader.loadFromFile("src/main/resources/adif/adx316.xsd");
+        assertThat(schema.getFields().size()).isEqualTo(179);
         System.out.printf("Loaded %s elements%n", schema.getFields().size());
         //for (Adif3Type type : schema.getTypes().values()) {
         //    System.out.println(type.toString());
@@ -28,14 +25,14 @@ public class Adif3SchemaLoaderTest {
         System.out.println();
         System.out.println("|ADIF Field|ADIF Type|");
         System.out.println("|----------|---------|");
-        for (Adif3Field field : schema.getFields().values().stream().sorted().collect(Collectors.toList())) {
+        for (Adif3Field field : schema.getFields().values().stream().sorted().toList()) {
             System.out.printf("| %s | %s |%n", field.getName(), prettyPrintTypeName(field.getType().getName()));
         }
 
         System.out.println();
         System.out.println("|ADIF Type|Base Type|Min|Max|");
         System.out.println("|---------|---------|---|---|");
-        for (Adif3Type type : schema.getTypes().values().stream().sorted().collect(Collectors.toList())) {
+        for (Adif3Type type : schema.getTypes().values().stream().sorted().toList()) {
             String name = prettyPrintTypeName(type.getName());
             String baseType = type.getBaseType() != null ? prettyPrintTypeName(type.getBaseType()) : "";
             String min = type.getMinInclusive() != null ? type.getMinInclusive().toString() : "";
